fix(react/components): fix button style on dark mode

--- a/packages/react/components/src/Button/button.scss
+++ b/packages/react/components/src/Button/button.scss
@@ -79,7 +79,7 @@
   }
 
   &--secondary {
-    background-color: var(--qdr-surface);
+    background-color: transparent;
     color: var(--qdr-action-active);
     border: 1px solid var(--qdr-border);
 
@@ -101,7 +101,7 @@
     }
 
     &.qdr-button--danger {
-      background-color: var(--qdr-surface);
+      background-color: transparent;
       color: var(--qdr-error);
       border: 1px solid var(--qdr-border);
 
@@ -125,7 +125,7 @@
   }
 
   &--outlined {
-    background-color: var(--qdr-surface);
+    background-color: transparent;
     color: var(--qdr-primary);
     border: 1px solid var(--qdr-primary);
 
@@ -142,12 +142,12 @@
     &:disabled {
       color: var(--qdr-action-disabled);
       border-color: var(--qdr-action-disabled);
-      background-color: var(--qdr-surface);
+      background-color: transparent;
       cursor: not-allowed;
     }
 
     &.qdr-button--danger {
-      background-color: var(--qdr-surface);
+      background-color: transparent;
       color: var(--qdr-error);
       border: 1px solid var(--qdr-error);
 
@@ -164,14 +164,14 @@
       &:disabled {
         color: var(--qdr-action-disabled);
         border-color: var(--qdr-action-disabled);
-        background-color: var(--qdr-surface);
+        background-color: transparent;
         cursor: not-allowed;
       }
     }
   }
 
   &--dashed {
-    background-color: var(--qdr-surface);
+    background-color: transparent;
     color: var(--qdr-primary);
     border: 1px dashed var(--qdr-border);
 
@@ -188,12 +188,12 @@
     &:disabled {
       color: var(--qdr-action-disabled);
       border-color: var(--qdr-action-disabled);
-      background-color: var(--qdr-surface);
+      background-color: transparent;
       cursor: not-allowed;
     }
 
     &.qdr-button--danger {
-      background-color: var(--qdr-surface);
+      background-color: transparent;
       color: var(--qdr-error);
       border: 1px dashed var(--qdr-error);
 
@@ -210,7 +210,7 @@
       &:disabled {
         color: var(--qdr-action-disabled);
         border-color: var(--qdr-action-disabled);
-        background-color: var(--qdr-surface);
+        background-color: transparent;
         cursor: not-allowed;
       }
     }
